--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -91,7 +91,8 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 
 .cm-indicator{
     position: absolute; left: 0; right: 0; bottom: .1rem; text-align: center;
-    .ci-tor{ display: inline-block; height: 7px; width: 7px; margin: 0 .03rem; background: #fff; box-shadow: 0 0 2px rgba(0,0,0,.2); border-radius: 4px;-webkit-transition: all .2s; transition: all .2s;}
+    .ci-tor{ display: inline-block; height: .04rem; width: .04rem; margin: 0 .03rem; background: #fff; box-shadow: 0 0 2px rgba(0,0,0,.2); border-radius: .02rem;-webkit-transition: all .2s; transition: all .2s;}
+    .ci-tor-cur{ width: .08rem;}
 }
 
 .cm-prolist{
@@ -103,7 +104,7 @@ textarea::-webkit-input-placeholder { color: #ccc;}
     .pl-title{ font-size: .13rem; line-height: .18rem; min-height: .36rem; display: -webkit-box; -webkit-box-orient:vertical;-webkit-line-clamp:2; text-overflow:ellipsis; overflow:hidden;}
     .pl-price{ padding-top: .05rem; font-size: .16rem; color: @base;}
     .pl-pun{ margin-right: .03rem; font-size: .12rem;}
-    .pl-info{ position: relative; padding: .1rem; background: #fff; border:1px solid #e5e5e5; border-top: none;}
+    .pl-info{ position: relative; padding: .1rem; background: #fff;}
     .pl-new{ position: absolute; left: .1rem; top: 0; z-index: 1; width: .27rem;}
     .pl-imgo{ position: relative;}
     .pl-btime{ position: absolute; left: 0; bottom: 0; right: 0; padding: 0 .05rem; background: @base; color: #fff; font-size: .1rem;}
