--- a/shopdemo/src/assets/css/base.css
+++ b/shopdemo/src/assets/css/base.css
@@ -800,14 +800,17 @@ textarea::-webkit-input-placeholder {
 }
 .cm-indicator .ci-tor {
   display: inline-block;
-  height: 7px;
-  width: 7px;
+  height: 0.04rem;
+  width: 0.04rem;
   margin: 0 0.03rem;
   background: #fff;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
+  border-radius: 0.02rem;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
+}
+.cm-indicator .ci-tor-cur {
+  width: 0.08rem;
 }
 .cm-prolist {
   padding: 0 0.1rem;
@@ -854,8 +857,6 @@ textarea::-webkit-input-placeholder {
   position: relative;
   padding: 0.1rem;
   background: #fff;
-  border: 1px solid #e5e5e5;
-  border-top: none;
 }
 .cm-prolist .pl-new {
   position: absolute;
