--- a/shoptest/n/assets/stylesheets/style.css
+++ b/shoptest/n/assets/stylesheets/style.css
@@ -151,9 +151,9 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .cm-slbox{ position: relative; overflow: hidden; text-align: center; padding: 10px 0; position: relative; background: #f6f6f6;}
 .cm-slbox-nom{ position: relative; padding: 0; background: none;}
 .cm-slbox-dis:before{ content: ""; display: block; position: absolute; z-index: 3; left: 0; top: 0; height: 100%; width: 100%; opacity: 0; }
-.cm-slbox .cp-li{ line-height: 36px; font-size: 18px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+.cm-slbox .cp-li{ line-height: 36px; height: 36px; float: left; width: 100%; font-size: 18px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
 .cm-slbox .cp-case{ position: relative; overflow: hidden; height: 252px;}
-.cm-slbox .cp-ul{ position: relative;}
+.cm-slbox .cp-ul{ position: relative; overflow: hidden;}
 .cm-slbox .cp-case:before{content: ""; display: block; position: absolute; left: 0; top: 0; height: 108px; width: 100%; background:-webkit-linear-gradient(180deg,rgba(246,246,246,1) 0%,rgba(246,246,246,.4) 100%); background:linear-gradient(180deg,rgba(246,246,246,1) 0%,rgba(246,246,246,.4) 100%); border-bottom: 1px solid #aaa; z-index: 2;}
 .cm-slbox .cp-case:after{content: ""; display: block; position: absolute; left: 0; bottom: 0; height: 108px; width: 100%; background:-webkit-linear-gradient(180deg,rgba(246,246,246,.4) 0%,rgba(246,246,246,1) 100%); background:linear-gradient(180deg,rgba(246,246,246,.4) 0%,rgba(246,246,246,1) 100%); border-top: 1px solid #aaa; z-index: 2;}
 .cm-slbox .cm-slbox-time{ position: relative; float: left; width: 16.6%;}
